# pawelrubin_pycourse

./: .gitignore  .pylintrc  Pipfile  pyproject.toml
lista1/: lista1.ipynb  lista1.py
lista2/: _base64.py  base64.py  repchecker.py  rsa.py  tolower.py  wordcount.py
lista3/: lista3.py
lista4/: fastbignum.py  node.py  overload.py  thetimer.py  timer.py  tree.py
lista5/: ratings.py  recomendations.py
lista6/: graph.py  neural_network.py  xor.py
lista6_dodatkowe/: 2_3.py  neural_network.py
