[tool.poetry]
name = "PythonCourse"
description = ""
authors = [""]
version = "0.0.0"

[tool.poetry.dependencies]
python = "==3.8"
ipython = "*"
jupyter = "*"
numpy = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pyupgrade = "*"
black = "^19.10b0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
